force-app/main/default/objects/Quick_Reference__kav/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <label>Info</label>
    <length>64500</length>
    <type>Html</type>
</CustomField>