force-app/main/default/objects/Quick_Reference__kav/fields/Legacy_Company__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Company__c</fullName>
    <label>Legacy Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Legacy U</fullName>
            </value>
            <value>
                <fullName>Legacy X</fullName>
            </value>
            <value>
                <fullName>Veritiv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>